--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
       // Check win condition
       if (document.querySelectorAll('.boxMatch').length === emojis.length) {
         setTimeout(() => {
-          alert('🎉 Congrats, you won Merry Match! Merry <Christmas! 🎄');
+          alert('🎉 Congrats, you won Merry Match! Merry Christmas! 🎄');
         }, 500);
       }
     }
